[gd_scene load_steps=2 format=2]

[ext_resource path="res://source/ui/lobby.gd" type="Script" id=1]

[node name="lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="host" type="Button" parent="."]
margin_left = 370.0
margin_top = 125.0
margin_right = 661.0
margin_bottom = 199.0
text = "Host Your Server"

[node name="your_ip" type="Label" parent="host"]
anchor_right = 1.0
margin_top = -17.0
margin_bottom = -3.0
text = "Your IP"
align = 1

[node name="join" type="Button" parent="."]
margin_left = 369.0
margin_top = 266.0
margin_right = 672.0
margin_bottom = 345.0
disabled = true
text = "Join A Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="server_ip" type="LineEdit" parent="join"]
anchor_right = 1.0
margin_top = -28.0
margin_bottom = -4.0
align = 1
placeholder_text = "Enter Server Ip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.266667, 0.262745, 0.313726, 1 )

[node name="Label" type="Label" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Joining"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[connection signal="pressed" from="host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="join" to="." method="_on_join_pressed"]
[connection signal="text_changed" from="join/server_ip" to="." method="_on_server_ip_text_changed"]
